<resources>
    <string name="app_name">Warungku</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_transaction">Transaksi</string>
    <string name="title_product">Produk</string>
    <string name="title_account">Akun Saya</string>
    <string name="sign_up">DAFTAR</string>
    <string name="login">MASUK</string>
    <string name="add_product">Tambah Produk</string>
    <string name="logout">Keluar</string>
    <string name="contact">Kontak</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="hint_phone">089630930912</string>
    <string name="address">Alamat</string>
    <string name="tv_address">Jl. Mayor Madmuin Hasibuan No.68, RT.004/RW.004, Margahayu, Kec. Bekasi Tim., Kota Bks, Jawa Barat 17113</string>
    <string name="change">Ubah</string>
    <string name="label_email">Email</string>
    <string name="label_owner">Pemilik</string>
    <string name="hint_owner">Herianto Oy</string>
    <string name="hint_name">Toko Ku</string>
    <string name="category">Makan</string>
    <string name="today">Hari Ini</string>
    <string name="count_today">100</string>
    <string name="week">Minggu Ini</string>
    <string name="count_week">100</string>
    <string name="hint_email">herianto@gmail.com</string>
    <string name="label_description">Deskripsi</string>
    <string name="label_name">Nama Toko</string>
    <string name="im_not_robot">Saya bukan robot!</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="picture">picture</string>
    <string name="label_code">Kode Produk</string>
    <string name="label_product_name">Nama Produk</string>
    <string name="label_stock">Stok</string>
    <string name="label_price">Harga</string>
    <string name="hint_stock">500</string>
    <string name="hint_price">Rp. 5000</string>
    <string name="hint_product">Teh Botol</string>
    <string name="hint_code">TB001</string>
    <string name="label_pos">Kasir</string>
    <string name="title_pos">Kasir</string>
    <string name="label_search">Cari</string>
    <string name="label_pay">Bayar</string>
    <string name="label_total">Total</string>
    <string name="hint_total">Rp. 90.000</string>
    <string name="list_product">Daftar Produk</string>
    <string name="label_qty">Kuantitas</string>
    <string name="label_no_trx">Transaksi</string>
    <string name="hint_trx">TRX000001</string>
    <string name="label_date">Tanggal</string>
    <string name="hint_date">12/01/2021 20:00</string>
    <string name="tv_detail">Detail</string>
    <string name="label_cancel">Batalkan</string>
    <string name="label_status">Status</string>
    <string name="hint_status">Berhasil</string>
    <string name="hint_password_repeat">Ulangi Kata Sandi</string>
    <string name="label_loading">Mohon Tunggu...</string>
</resources>