<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pos">

    <fragment
        android:id="@+id/navigation_pos"
        android:name="com.warungku.ui.bnav.pos.PosFragment"
        android:label="@string/title_pos"
        tools:layout="@layout/fragment_pos" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.warungku.ui.bnav.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.warungku.ui.bnav.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.warungku.ui.bnav.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>