<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_owner"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_store_mall_directory_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_repeat"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawablePadding="10dp"
            android:gravity="top|left"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="15"
            android:padding="15dp"
            android:textColor="@color/white"
            
            android:textColorHint="@color/white"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/white"
                android:checked="false"
                android:text="@string/im_not_robot"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login"
            android:onClick="signup"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>