<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bnav.pos.PosFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcode_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:id="@+id/ll_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/barcode_view"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@drawable/shape_text_box_blue"
                android:drawableStart="@drawable/ic_baseline_qr_code_blue"
                android:drawablePadding="10dp"
                android:hint="@string/label_code"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/btn_manual_scan"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_signup"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"

                    android:text="@string/label_search"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_list_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_manual"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/list_product"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_trx_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_list_product"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="180dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/hint_total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_signup"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/label_pay"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>