<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp" />

            <LinearLayout
                android:id="@+id/btn_select"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_circle"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="btnSelect">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/change"
                    android:src="@drawable/ic_baseline_camera_alt_24" />
            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:id="@+id/et_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_owner"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_phone_iphone_24"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_store_mall_directory_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:drawableStart="@drawable/ic_baseline_description_24"
            android:drawablePadding="10dp"
            android:hint="@string/label_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_text_box"
            android:gravity="top|left"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="15"
            android:scrollbars="vertical"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#e0e0d1"
            tools:ignore="RtlHardcoded" />


        <LinearLayout
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/shape_login"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="15dp"
                android:text="@string/change"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>